--- a/Practice_Work/Pod.yaml
+++ b/Practice_Work/Pod.yaml
@@ -1,8 +1,8 @@
-apiversion: v1
+apiVersion: v1
 kind: Pod
 metadata:
   name: test-pod
-  label:
+  labels:
     app_type: frontend
 spec:
   containers:
